First step in merging gcmalloc in ASCYLIB

--- a/common/Makefile.common
+++ b/common/Makefile.common
@@ -6,7 +6,7 @@
 TBB_LIBS      ?= /home/trigonak/code/tbb42_20140122oss/build/linux_intel64_gcc_cc4.8_libc2.17_kernel3.11.0_release
 TBB_INCLUDES  ?= /home/trigonak/code/tbb42_20140122oss/include
 
-URCU_PATH     ?= /home/trigonak/code/urcu #path to the URCU installation 
+URCU_PATH     ?= /home/trigonak/code/urcu #path to the URCU installation
 
 # Compiler
 SOLARIS_CC1 	?= /opt/csw/bin/gcc
@@ -63,6 +63,7 @@ else
 endif
 
 LIBSSMEM = $(ROOT)/external
+LIBGCMALLOC = $(ROOT)/external
 
 ifeq ($(LOCK),)
   LOCK          ?= TAS
@@ -79,13 +80,13 @@ endif
 # Platform dependent settings
 #############################
 #
-# GCC thread-local storage requires "significant 
+# GCC thread-local storage requires "significant
 # support from the linker (ld), dynamic linker
 # (ld.so), and system libraries (libc.so and libpthread.so), so it is
 # not available everywhere." source: GCC-doc.
 #
-# pthread_spinlock is replaced by pthread_mutex 
-# on MacOS X, as it might not be supported. 
+# pthread_spinlock is replaced by pthread_mutex
+# on MacOS X, as it might not be supported.
 # Comment LOCK = MUTEX below to enable.
 
 ifndef OS_NAME
@@ -134,7 +135,7 @@ endif
 ifeq ($(PC_NAME), lpd48core)
     PLATFORM_KNOWN = 1
     CC = gcc-4.8
-    CFLAGS += -DOPTERON -DPLATFORM_MCORE 
+    CFLAGS += -DOPTERON -DPLATFORM_MCORE
     PLATFORM_NUMA = 1
 endif
 # ifeq ($(PC_NAME), lpdxeon2680)
@@ -145,7 +146,7 @@ endif
 
 ifeq ($(PC_NAME), lpdpc34)
     PLATFORM_KNOWN = 1
-    CFLAGS += -DHASWELL 
+    CFLAGS += -DHASWELL
     PLATFORM_NUMA = 0
 endif
 
@@ -219,6 +220,7 @@ ifeq ($(ARCH_NAME), x86_64)
     LDFLAGS += -m64
     SSPFD = -lsspfd_x86_64
     LDFLAGS += -L$(LIBSSMEM)/lib -lssmem_x86_64
+		LDFLAGS += -L$(LIBGCMALLOC)/lib -lgcmalloc_x86_64
 endif
 
 ifeq ($(ARCH_NAME), sun4v)
@@ -272,7 +274,11 @@ else
 		ifeq ($(GC),0)
 			CFLAGS += -DGC=0
 		else
-			CFLAGS += -DGC=1
+			ifeq ($(GC),1)
+				CFLAGS += -DGC=1
+			else
+				CFLAGS += -DGC=2
+			endif
 		endif
 	endif
 
@@ -366,4 +372,3 @@ ifeq ($(WORKLOAD),2)
     $(info *** used for the test. Zipf random numbers are precomputed. ***)
     $(info ***************************************************************)
 endif
-
