--- a/src/linkedlist-lazy/Makefile
+++ b/src/linkedlist-lazy/Makefile
@@ -22,17 +22,20 @@ measurements.o:
 ssalloc.o:
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/ssalloc.o $(PROF)/ssalloc.c
 
+memalloc.o: ssalloc.o
+	$(CC) $(CFLAGS) -c -o $(BUILDIR)/memalloc.o $(BUILDIR)/ssalloc.o $(PROF)/memalloc.c
+
 htlock.o:
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/htlock.o $(PROF)/htlock.c
 
 clh.o:
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/clh.o $(PROF)/clh.c
 
-linkedlist-lock.o: 
+linkedlist-lock.o:
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/linkedlist-lock.o linkedlist-lock.c
 
 lazy.o: linkedlist-lock.h linkedlist-lock.o htlock.o clh.o
-	$(CC) $(CFLAGS) -c -o $(BUILDIR)/lazy.o lazy.c	 
+	$(CC) $(CFLAGS) -c -o $(BUILDIR)/lazy.o lazy.c
 
 intset.o: linkedlist-lock.h lazy.h clh.o
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/intset.o intset.c
@@ -40,8 +43,8 @@ intset.o: linkedlist-lock.h lazy.h clh.o
 test.o: linkedlist-lock.h lazy.h intset.h
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/test.o $(TEST_FILE)
 
-main: measurements.o ssalloc.o linkedlist-lock.o lazy.o intset.o test.o htlock.o clh.o
-	$(CC) $(CFLAGS) $(BUILDIR)/measurements.o $(BUILDIR)/ssalloc.o $(BUILDIR)/htlock.o $(BUILDIR)/clh.o $(BUILDIR)/linkedlist-lock.o $(BUILDIR)/lazy.o $(BUILDIR)/intset.o $(BUILDIR)/test.o -o $(BINS) $(LDFLAGS) 
+main: measurements.o memalloc.o ssalloc.o linkedlist-lock.o lazy.o intset.o test.o htlock.o clh.o
+	$(CC) $(CFLAGS) $(BUILDIR)/measurements.o $(BUILDIR)/memalloc.o $(BUILDIR)/ssalloc.o $(BUILDIR)/htlock.o $(BUILDIR)/clh.o $(BUILDIR)/linkedlist-lock.o $(BUILDIR)/lazy.o $(BUILDIR)/intset.o $(BUILDIR)/test.o -o $(BINS) $(LDFLAGS)
 
 clean:
 	rm -f $(BINS)
