--- a/src/bst-aravind/Makefile
+++ b/src/bst-aravind/Makefile
@@ -15,14 +15,17 @@ measurements.o:
 ssalloc.o:
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/ssalloc.o $(PROF)/ssalloc.c
 
+memalloc.o: ssalloc.o
+	$(CC) $(CFLAGS) -c -o $(BUILDIR)/memalloc.o $(BUILDIR)/ssalloc.o $(PROF)/memalloc.c
+
 bst-aravind.o: 
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/bst-aravind.o bst-aravind.c
 
 test.o: bst-aravind.h
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/test.o $(TEST_FILE)
 
-main: measurements.o ssalloc.o  bst-aravind.o test.o 
-	$(CC) $(CFLAGS) $(BUILDIR)/measurements.o $(BUILDIR)/ssalloc.o $(BUILDIR)/bst-aravind.o  $(BUILDIR)/test.o -o $(BINS) $(LDFLAGS)
+main: measurements.o memalloc.o ssalloc.o  bst-aravind.o test.o 
+	$(CC) $(CFLAGS) $(BUILDIR)/measurements.o $(BUILDIR)/memalloc.o $(BUILDIR)/ssalloc.o $(BUILDIR)/bst-aravind.o  $(BUILDIR)/test.o -o $(BINS) $(LDFLAGS)
 
 clean:
 	-rm -f $(BINS)
