--- a/src/bst-tk/Makefile
+++ b/src/bst-tk/Makefile
@@ -15,6 +15,9 @@ measurements.o:
 ssalloc.o:
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/ssalloc.o $(PROF)/ssalloc.c
 
+memalloc.o: ssalloc.o
+	$(CC) $(CFLAGS) -c -o $(BUILDIR)/memalloc.o $(BUILDIR)/ssalloc.o $(PROF)/memalloc.c
+
 bst.o: 
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/bst.o bst.c
 
@@ -27,8 +30,8 @@ intset.o: bst.h bst_tk.h
 test.o: bst.h bst_tk.h intset.h
 	$(CC) $(CFLAGS) -c -o $(BUILDIR)/test.o $(TEST_FILE)
 
-main: measurements.o ssalloc.o bst.o bst_tk.o intset.o test.o
-	$(CC) $(CFLAGS) $(BUILDIR)/measurements.o $(BUILDIR)/ssalloc.o $(BUILDIR)/bst.o $(BUILDIR)/bst_tk.o $(BUILDIR)/intset.o $(BUILDIR)/test.o -o $(BINS) $(LDFLAGS) 
+main: measurements.o memalloc.o ssalloc.o bst.o bst_tk.o intset.o test.o
+	$(CC) $(CFLAGS) $(BUILDIR)/measurements.o $(BUILDIR)/memalloc.o $(BUILDIR)/ssalloc.o $(BUILDIR)/bst.o $(BUILDIR)/bst_tk.o $(BUILDIR)/intset.o $(BUILDIR)/test.o -o $(BINS) $(LDFLAGS) 
 
 clean:
 	rm -f $(BINS)
